--- a/QSAR_Part_2_Exploratory_Data_Analysis.ipynb
+++ b/QSAR_Part_2_Exploratory_Data_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPs/1qmAMVr8bpNGA38fuzE",
+      "authorship_tag": "ABX9TyPUzQgwFHHiwBU6sKLrGnqy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "l92dO-dfPXPX"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -180,6 +180,17 @@
       ],
       "metadata": {
         "id": "BuRboBUsOUwN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_clean.standard_value.describe()"
+      ],
+      "metadata": {
+        "id": "XwSwiB0NRlu8"
       },
       "execution_count": null,
       "outputs": []
@@ -297,7 +308,8 @@
         "plt.xlabel(\"pIC50\")\n",
         "plt.ylabel(\"Count\")\n",
         "plt.title(\"pIC50 Distribution\")\n",
-        "plt.show()"
+        "plt.show()\n",
+        "plt.savefig('histogram_pic50.pdf')"
       ],
       "metadata": {
         "id": "uDNXa7PVQopN"
@@ -313,7 +325,7 @@
         "sns.countplot(x=\"bioactivity_class\", data= df_clean, hue=\"bioactivity_class\", edgecolor='black')\n",
         "\n",
         "plt.xlabel('Bioactivity class', fontsize=14, fontweight='bold')\n",
-        "plt.ylabel('Frequency', fontsize=14, fontweight='bold')\n"
+        "plt.ylabel('Frequency', fontsize=14, fontweight='bold')"
       ],
       "metadata": {
         "id": "gkyt7id3kSEE"
@@ -376,7 +388,7 @@
       "metadata": {
         "id": "iayCDmtOWauk"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -451,7 +463,7 @@
       "metadata": {
         "id": "42gGL-k0WIiX"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -541,7 +553,7 @@
       "metadata": {
         "id": "XTjav3soM3Yn"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -572,7 +584,7 @@
         "plt.xlabel('Bioactivity class', fontsize=14, fontweight='bold')\n",
         "plt.ylabel('Frequency', fontsize=14, fontweight='bold')\n",
         "\n",
-        "plt.savefig('plot_bioactivity_class.pdf')"
+        "plt.savefig('barplot_bioactivity_class.pdf')"
       ],
       "metadata": {
         "id": "irXSCZDJa8TB"
@@ -597,9 +609,7 @@
         "sns.boxplot(x = \"bioactivity_class\", y = \"pIC50\", data = df_combined, hue=\"bioactivity_class\")\n",
         "\n",
         "plt.xlabel('Bioactivity class', fontsize=14, fontweight='bold')\n",
-        "plt.ylabel('pIC50 value', fontsize=14, fontweight='bold')\n",
-        "\n",
-        "plt.savefig('plot_ic50.pdf')"
+        "plt.ylabel('pIC50 value', fontsize=14, fontweight='bold')"
       ],
       "metadata": {
         "id": "Qm9iQ3TSboC7"
@@ -626,7 +636,7 @@
         "plt.xlabel('MW', fontsize=14, fontweight='bold')\n",
         "plt.ylabel('LogP', fontsize=14, fontweight='bold')\n",
         "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0)\n",
-        "plt.savefig('plot_MW_vs_LogP.pdf')"
+        "plt.savefig('scatter_plot_MW_vs_LogP.pdf')"
       ],
       "metadata": {
         "id": "fEqnfUOTdCDp"
@@ -705,7 +715,7 @@
       "metadata": {
         "id": "a2qLoX_KfrCp"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -804,165 +814,55 @@
         "mannwhitney(\"NumHAcceptors\", df_combined, verbose=True)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 115
-        },
-        "id": "mDHkWFL8hiIu",
-        "outputId": "6c849ff4-425c-48c9-b03e-6a11e458aae5"
+        "id": "mDHkWFL8hiIu"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Descriptor: NumHAcceptors\n",
-            "Statistics=656825.500, p=0.518\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "      Descriptor  Statistics         p  alpha  \\\n",
-              "0  NumHAcceptors    656825.5  0.517512   0.05   \n",
-              "\n",
-              "                          Interpretation  \n",
-              "0  Same distribution (fail to reject H0)  "
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-a2f65514-2a82-4cbc-974a-5356a84524bd\" class=\"colab-df-container\">\n",
-              "    <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Descriptor</th>\n",
-              "      <th>Statistics</th>\n",
-              "      <th>p</th>\n",
-              "      <th>alpha</th>\n",
-              "      <th>Interpretation</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>NumHAcceptors</td>\n",
-              "      <td>656825.5</td>\n",
-              "      <td>0.517512</td>\n",
-              "      <td>0.05</td>\n",
-              "      <td>Same distribution (fail to reject H0)</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "    <div class=\"colab-df-buttons\">\n",
-              "\n",
-              "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a2f65514-2a82-4cbc-974a-5356a84524bd')\"\n",
-              "            title=\"Convert this dataframe to an interactive table.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
-              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
-              "  </svg>\n",
-              "    </button>\n",
-              "\n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-buttons div {\n",
-              "      margin-bottom: 4px;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "    <script>\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#df-a2f65514-2a82-4cbc-974a-5356a84524bd button.colab-df-convert');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a2f65514-2a82-4cbc-974a-5356a84524bd');\n",
-              "        const dataTable =\n",
-              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                    [key], {});\n",
-              "        if (!dataTable) return;\n",
-              "\n",
-              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "          + ' to learn more about interactive tables.';\n",
-              "        element.innerHTML = '';\n",
-              "        dataTable['output_type'] = 'display_data';\n",
-              "        await google.colab.output.renderOutput(dataTable, element);\n",
-              "        const docLink = document.createElement('div');\n",
-              "        docLink.innerHTML = docLinkHtml;\n",
-              "        element.appendChild(docLink);\n",
-              "      }\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "\n",
-              "    </div>\n",
-              "  </div>\n"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "summary": "{\n  \"name\": \"mannwhitney(\\\"NumHAcceptors\\\", df_combined, verbose=True)\",\n  \"rows\": 1,\n  \"fields\": [\n    {\n      \"column\": \"Descriptor\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"NumHAcceptors\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Statistics\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 656825.5,\n        \"max\": 656825.5,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          656825.5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"p\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 0.5175124330285618,\n        \"max\": 0.5175124330285618,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          0.5175124330285618\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"alpha\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 0.05,\n        \"max\": 0.05,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          0.05\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Interpretation\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Same distribution (fail to reject H0)\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
-          },
-          "metadata": {},
-          "execution_count": 42
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Combine All Statistical Results**"
+      ],
+      "metadata": {
+        "id": "TqoaID2uhIZg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# Get list of all Mann-Whitney CSV files in current folder\n",
+        "mw_files = glob.glob(\"mannwhitneyu_*.csv\")\n",
+        "\n",
+        "# Combine them into one DataFrame\n",
+        "mw_combined = pd.concat([pd.read_csv(f) for f in mw_files], ignore_index=True)\n",
+        "\n",
+        "# Save combined CSV\n",
+        "combined_filename = \"mannwhitney_summary.csv\"\n",
+        "mw_combined.to_csv(combined_filename, index=False)\n",
+        "\n",
+        "print(f\"Combined Mann-Whitney CSV saved as {combined_filename}\")"
+      ],
+      "metadata": {
+        "id": "aP8Y16Jal7lZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mw_combined"
+      ],
+      "metadata": {
+        "id": "WxCi71bJc2HD"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1080,43 +980,6 @@
       "metadata": {
         "id": "YQWjWQ5qlAup"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "import glob\n",
-        "import os\n",
-        "\n",
-        "# Get list of all Mann-Whitney CSV files in current folder\n",
-        "mw_files = glob.glob(\"mannwhitneyu_*.csv\")\n",
-        "\n",
-        "# Combine them into one DataFrame\n",
-        "mw_combined = pd.concat([pd.read_csv(f) for f in mw_files], ignore_index=True)\n",
-        "\n",
-        "# Save combined CSV\n",
-        "combined_filename = \"mannwhitney_summary.csv\"\n",
-        "mw_combined.to_csv(combined_filename, index=False)\n",
-        "\n",
-        "print(f\"Combined Mann-Whitney CSV saved as {combined_filename}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aP8Y16Jal7lZ",
-        "outputId": "d723b9b9-8c40-4c2c-b372-836da15c01a8"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Combined Mann-Whitney CSV saved as mannwhitney_summary.csv\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
